--- a/AutoLogin-src/nbproject/project.properties
+++ b/AutoLogin-src/nbproject/project.properties
@@ -60,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=autologin.src.AutoLogin
+main.class=view.Index
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
