Revert "fix sendRequest function"
This reverts commit 7559f8228a03bc8f08cb9c1db785caa9d4704dac.

--- a/AutoLogin-src/nbproject/project.properties
+++ b/AutoLogin-src/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/AutoLogin-src.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-logging-1.2.jar=..\\lib\\commons-logging-1.2.jar
+file.reference.httpclient-4.5.5.jar=..\\lib\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=..\\lib\\httpcore-4.4.9.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.httpclient-4.5.5.jar}:\
+    ${file.reference.httpcore-4.4.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
